2009-03-14  Les Harris  <lharris@gnome.org>

	* src/Makefile.am: Added mud-telnet-new-environ.[ch]
	* src/mud-telnet-new-environ.[ch]: New files which implement the
	NEW-ENVIRON telnet option.
	* src/mud-telnet.c (mud_telnet_register_handlers): Register the
	NEW-ENVIRON handler.
	* src/mud-telnet.h: Added NEW-ENVIRON option defines.

2009-03-14  Les Harris  <lharris@gnome.org>

	* src/mud-telnet-mssp.c: I was looking at a stale spec when first
	coding. Updated mssp parsing to handle multiple val's per var. 

2009-03-14  Les Harris  <lharris@gnome.org>

	* src/Makefile.am: Added src/mud-telnet-mssp.[ch]
	* src/mud-telnet-mssp.[ch]: New files which implement the Mud Server
	Status Protocol (MSSP) We don't really do anything with this
	information at the moment except expose it as a hashtable. Plugins
	might find it useful.
	* src/mud-telnet.c: Now creates a MSSP handler.
	* src/mud-telnet.h: Added MSSP option defines.

2009-03-14  Les Harris  <lharris@gnome.org>

	* src/mud-telnet-zmp.c (mud_telnet_zmp_handle_sub_neg),
	(ZMP_check): Improved creation of argv for ZMP commands. Added check
	for malformed ZMP_check command to prevent crash.
	* src/mud-telnet.c (mud_telnet_process): Moved MCCP related code into
	an ENABlE_MCCP block
	* src/mud-telnet.h: Increased subneg buffer size to 16k

2009-03-13  Les Harris  <lharris@gnome.org>

	* src/mud-telnet.c: Poll for mccp-new in main processing loop. This
	prevents MCCP corruption when it is disabled and then reenabled.

2009-03-13  Les Harris  <lharris@gnome.org>

	* AUTHORS: Added self.
	* configure.ac: Removed some stale checks.
	* src/Makefile.am: Removed mud-telnet-handlers.[ch]. Added new files.
	* src/mud-telnet-handlers.[ch]: Deleted files.
	* src/gnome-mud.c (main): Use g_get_user_data_dir and G_DIR_SEPARATOR
	to locate the config directory.
	* src/mud-connection-view.[ch]: Updated GObject Code. Added numerous
	parameters and removed accessor functions when they were made
	redundant.